# carnaval-de-barranquilla

./: .gitignore  README.md
scrapers/: .env.example  pyproject.toml  requirements.txt  run_spider.py  scrapy.cfg
scrapers/scrapers/: items.py  settings.py
scrapers/scrapers/events/: carnaval_oficial.py
scrapers/scrapers/news/: elheraldo.py  eluniversal.py
scrapers/scrapers/pipeline/: cleaning.py  dedup.py  storage.py
supabase/migrations/: 001_initial_schema.sql
web/: package-lock.json
